--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,6 +1,7 @@
+@import "https://fonts.googleapis.com/css?family=Raleway";
+
+
 /* 
-
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -44,3 +45,4 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
