--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css?family=Raleway";
-
+@import url('https://fonts.googleapis.com/css2?family=Emblema+One&family=Pacifico&display=swap');
 
 /* 
 #root {
